added html updates

--- a/Adventures.html
+++ b/Adventures.html
@@ -8,12 +8,16 @@
 </head>
 
 <body>
+	
+     <header>
 	<nav>
-        <a href="Assignment2Demo.html">Home </a>
-        <a href="BabyHedgehogs.html">Baby Hedgehogs</a>
-        <a href="Adventures.html">Hedgehog Adventures</a>
-    
+        <ul>
+        <li><a href="Assignment2Demo.html">Home </a></li>
+        <li><a href="BabyHedgehogs.html">Baby Hedgehogs</a></li>
+        <li><a href="Adventures.html">Hedgehog Adventures</a></li>
+        </ul>
     </nav>
+    </header>
 
 	<h1>Hedgehog Headquarters: Hedgehog Adventures!</h1>
 
