--- a/BabyHedgehogs.html
+++ b/BabyHedgehogs.html
@@ -8,12 +8,15 @@
 </head>
 
 <body>
+	 <header>
 	<nav>
-        <a style=padding-left:50px; href="Assignment2Demo.html">Home </a>
-        <a style=padding-left:50px; href="BabyHedgehogs.html">Baby Hedgehogs</a>
-        <a style=padding-left:50px; href="Adventures.html">Hedgehog Adventures</a>
-    
+        <ul>
+        <li><a href="Assignment2Demo.html">Home </a></li>
+        <li><a href="BabyHedgehogs.html">Baby Hedgehogs</a></li>
+        <li><a href="Adventures.html">Hedgehog Adventures</a></li>
+        </ul>
     </nav>
+    </header>
 
 	<h1>Hedgehog Headquarters: Baby Hedgehogs!</h1>
 
