--- a/Assignment2Demo.html
+++ b/Assignment2Demo.html
@@ -7,13 +7,19 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
+   /* justify content: space-between will make one of your "children" (headings, whatever) be on the left side of a container, and the other child be on the right corner, equally distributing the space between them. */
+    
+    
 <body>
     <header>
 	<nav>
-        <ul>
+        <ul class="container">
         <li><a href="Assignment2Demo.html">Home </a></li>
         <li><a href="BabyHedgehogs.html">Baby Hedgehogs</a></li>
         <li><a href="Adventures.html">Hedgehog Adventures</a></li>
+        <li class="search">
+                <input type="text" class="search-input" placeholder="Search">
+        </li>
         </ul>
     </nav>
     </header>
