--- a/Assignment2Demo.html
+++ b/Assignment2Demo.html
@@ -6,9 +6,7 @@
 	<title>Assignment Two eteator Site</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
-
-   /* justify content: space-between will make one of your "children" (headings, whatever) be on the left side of a container, and the other child be on the right corner, equally distributing the space between them. */
-    
+   
     
 <body>
     <header>
@@ -29,9 +27,9 @@
 	<h1 style= padding-left:30px;padding-right:30px; style=text-align:center>Hedgehog Headquarters</h1>
 
 	<p style= padding-left:30px;padding-right:30px; style=text-align:center>Welcome to Hedgehog Headquarters! At HH, we specialize in information about the cute, tiny little species, and some adorable photos! Baby hedgehogs? We got’em. Adult hedgehogs? Got’em. Hedgehogs just having a good time on an adventure? Got that too! Use our navigation bar above to explore, and have a good time!</p>
-
-<img style= padding-left:30px;padding-right:30px; alt="a hedgehog on its back, being held in a hand, smiling" src="images/hedgehog.jpg" height="300px;">
-
+<div class="front">
+<img style= padding-left:30px;padding-right:30px; alt="a hedgehog on its back, being held in a hand, smiling" src="images/hedgehog.jpg">
+</div>
 	<h2 style= padding-left:30px;padding-right:30px; style=text-align:center>Hedgehogs are our favorite animal here at Hedgehog Headquarters! Here’s Why:</h2>
 
 <ul style= padding-left:225px;padding-right:30px; style=text-align:center>
